--- a/disec.html
+++ b/disec.html
@@ -73,19 +73,21 @@
 						<!-- Content -->
 							<section id="content">
 								<div style="text-align: center;">
-									<h2 style="font: perpetua">Sonnenburg Summit (FCC)</h2>
+									<h2 style="font: perpetua">DISEC</h2>
 					<p style="font: 1.25em perpetua">
-						<b>"It is not heroes that make history but history that makes heroes"</b>
+						<b>"There can be no true disarmament without peace, there can be no real peace without very material disarmament." </b>
 					</p>
 					<p style="font: 1.25em perpetua;">
 
-						<b>-Stalin</b>
+						<b>-Dwight D. Eisenhower</b>
 					</p>
 					<p style="font: 1.15em perpetua">
-						A committee consisting of the most substantial powers in the past two decades come together in 2035 to address
-the anonymous message that threatens to release a potent bioweapon upon the world. With an urgent need
-to put aside their post-war differences after years of global political unrest, will the countries find the
-strength to unite when faced with the consequences of the dark side of science?
+						From fast-paced conflict resolution to revolutionary policy changes, DISEC lies at the forefront of the UN General Assembly. With nuanced networks and clandestine routes, arms trafficking circumvents legal regulations, thriving on the black market. This illicit trade poses a grave challenge to global security, as it fuels conflicts, supports terrorism, and perpetuates violence. As AI technologies continue to advance, the arms trafficking landscape becomes a battleground where these intelligent systems compete against each other, the intricate dance between weapons traffickers and law enforcement continues to unfold  in a relentless pursuit of technological supremacy.
+						</p>
+						<p style="font: 1.15em perpetua">
+
+Will the committe rise to the challenge of the emerging AI technologies and keep ahead of the curve?
+
 </p>
 					<header class="major">
 						</header>
