--- a/index.html
+++ b/index.html
@@ -306,8 +306,8 @@ setInterval('updateTimer()', 1000);
 								<strong><p style="font-size:36px;">FUTURUM EST MANIBUS</p></strong>
 							</div>
 							<p style="font-family: perpetua; font-size: 50px;">
-								<strong>27<sup>th</sup>,  28<sup>th</sup> &  29<sup>th</sup>								
-									<br>June 2023</strong></p>
+								<strong>26<sup>th</sup>, 27<sup>th</sup> & 28<sup>th</sup>								
+									<br><br>June 2023</strong></p>
 							
 								
 						</center>
