--- a/ipc.html
+++ b/ipc.html
@@ -18,7 +18,7 @@
 
 			<!-- Header -->
 			<header id="header">
-                <h1 id="logo"><a href="index.html">RNPSMUN 2022</a></h1>
+                <h1 id="logo"><a href="index.html">RNPSMUN 2023</a></h1>
                 <nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
@@ -75,17 +75,17 @@
 								<div style="text-align: center;">
 									<h2>International Press Corps</h2>
 					<p style="font-size: 1.25em">
-						<b>“The first essence of journalism is to know what you want to know, the second, is to find out who will tell you.”</b>
+						<b>"Put it before them briefly, so they will read it; clearly so they will appreciate it, picturesquely so they will remember it and, above all, accurately so they will be guided by its light."</b>
 					</p>
 					<p style="font-size: 1.25em;">
-                                            <b>-John Gunther</b>
+                                            <b> Joseph Pulitzer</b>
 					</p>
 					<p style="font-size: 1.15em">
-						The international press committee is designed to represent journalists and the media. The IPC's agenda for
-its journalists in this committee, is to tackle political polarization in relation to modern journalism. It is an issue
-prevalent in the modern day and we aim to try and find a ethical solution to this problem by covering the
-topic of censorship and bias.
-</p>
+						A committee brimming with bright ideas, sophisticated opinions and a love for writing, delegates are tasked with the duty of holding the authority accountable. A council of reputed news outlets must collaborate to settle a debate for the ages, whether it be a rising conflict between state and private funded agencies or battle of sensationalism. Does money manipulate facts? Can power polarise the press? 
+						</p>
+						<p style ='font-size: 1.15em;'>
+						Let us unite, and together, navigate the problems faced by today’s media
+						</p>
 					<header class="major">
 						</header>
 									<h3 class="major">AGENDA</h3>
