--- a/unhrc.html
+++ b/unhrc.html
@@ -74,17 +74,18 @@
 								<div style="text-align: center;">
 									<h2>United Nations Human Rights Council</h2>
 					<p style="font-size: 1.25em">
-						<b>“Injustice anywhere is a threat to justice everywhere”</b>
+						<b>“To deny people their human rights is to challenge their humanity.”</b>
 					</p>
 					<p style="font-size: 1.25em;">
-						<b>-Martin Luther King</b>
+						<b>-Nelson Mandela</b>
 					</p>
 					<p style="font-size: 1.15em">
-						"A privileged man's ignorance, is a marginalized man's grave." Injustice, poverty, social and cultural boycott,
-lack of opportunities and non-dominant social identities; these are the several problems marginalized
-communities like the LGBTQI+ community, migrants and refugees, women and girls, ethnic minorities
-face. The UNHRC will be focusing on how to resolve these problems, and it aims to help create an
-equitable, just and sustainable society
+						"Within the complex tapestry of the criminal justice system, the topic of prisoner rights stands as a controversial subject, particularly when juxtaposed with the disputable issue of capital punishment. In this captivating exploration, we unravel the tapestry of legal complexities and moral dilemmas that shape the lives of those sentenced to incarceration.  
+						</p>
+						<p style="font-size: 1.15em">
+
+						From the fiery debates surrounding this contentious agenda, we invite you to ponder the intricacies of justice behind and beyond the prison walls. Will this committee successfully determine the delicate equilibrium that must be struck between punishment and compassion?
+						
 </p>
 					<header class="major">
 						</header>
