--- a/unsc.html
+++ b/unsc.html
@@ -75,19 +75,23 @@
 								<div style="text-align: center;">
 									<h2>United Nations Emergency Meeting</h2>
 					<p style="font-size: 1.25em">
-						<b>“The World will not be destroyed by those who do evil, but by those who watch them without doing anything”</b>
+						<b>“Unable to make what is just strong, we have made what is strong just.”</b>
 					</p>
 					<p style="font-size: 1.25em;">
-						<b>-Albert Einstein</b>
+						<b>-Pascal</b>
 					</p>
 					<p style="font-size: 1.15em">
-Subsequent to the Russian military attack on Ukraine on the 24th of February 2022, the conflict has grown
-manifold and impacted all citizens, directly or indirectly, across the globe. Global Food Security is
-threatened and crude oil prices are spiking worldwide, crippling the economies of rich and poor countries.
-With each of these countries keen on its motive, tensions have reached an all-time high on the Eastern
-front of Europe.
-Can the world community stop the conflict before it leads to World War III? What can be done to prevent
-and punish war crimes?
+						We live in a world where the ever-lasting war for economic strength fuels territorial disputes.
+						Atrocities have been committed, they have been hidden from the world, and all the while the innocent have suffered. They deserve justice. 
+						Justice that this committee is willing to provide. 
+						</p>
+						<p style="font-size: 1.15em">
+						We tackle a conflict whose true history has been lost to time. An issue with such great implications, that those across the globe find themselves affected by it.
+						One of the best examples showcasing the intricate web of global diplomacy: The South China Sea Conflict.
+						</p>
+						<p style="font-size: 1.15em">
+						UNSC continues to be a forum where the direct agenda is not the only one that affects the committee. We welcome you, delegates, to join this committee and see for yourselves, the beauty of the divided world we live in.
+						
 					</p>
 					<header class="major">
 						</header>
