--- a/loksabha.html
+++ b/loksabha.html
@@ -73,15 +73,18 @@
 						<!-- Content -->
 							<section id="content">
 								<div style="text-align: center;">
-									<h2>Indian Constituent Assembly of 1948</h2>
+									<h2>Lok Sabha</h2>
 					<p style="font-size: 1.25em">
-						<b>“She (Bharat Maa) wears a garland of warriors to look beautiful, who is worshiped by the best scholars. Sung daily through Vedas and Puranas, salutations to such (Maa Bharati) who looks gorgeous with patriots.”</b>
+						<b>"satyaṁ brūyāt priyaṁ brūyāt na brūyāt satyam apriyam" </b>
 					</p>
 					<p style="font-size: 1.25em;">
-						<b>-Vishnu Purana</b>
+						<b>-Manusmriti 4.138						</b>
 					</p>
 					<p style="font-size: 1.15em">
-						It is the year 1948. Bharat has just “awoken to life and freedom.” But independence is just the first step. There is still a long way to go before we truly become the nation our ancestors envisioned. Drafting the constitution is one essential step in the right direction to becoming a unified nation and reclaiming our glorious history. So, delegates! It is now in your hands to decide the fate of Bharat, and live up to the expectations of our predecessors while also securing a utopian country for the generations to come.
+						The free man in a democracy is granted the right to express, write, publish, declare and broadcast what comes of his mind using the resources within his means as declared by any constitution, in written or in spirit within means of his own or those granted by his government but every feeling expressed can be a cause for commotion at any and all degree and so the obvious question if control is an apt solution arises, not in the mind of any lawmaker but also the lawful man, the participating citizen. 
+					</p>
+					<p style="font-size: 1.15em">
+						Can the Committee decide if all words under the sky as free as every man should be?
 
 					</p>
 									
