--- a/unsc.html
+++ b/unsc.html
@@ -28,7 +28,7 @@
 								<li><a href="unsc.html">UNSC </a></li>
 								<li><a href="unhrc.html">UNHRC</a></li>
 								<li><a href="loksabha.html">Lok Sabha</a></li>
-								<li><a href="fcc.html">DISEC</a></li>
+								<li><a href="disec.html">DISEC</a></li>
 								<li><a href="ipc.html">IPC</a></li>
 							</ul>
 						</li>
@@ -73,7 +73,7 @@
 						<!-- Content -->
 							<section id="content">
 								<div style="text-align: center;">
-									<h2>United Nations Emergency Meeting</h2>
+									<h2>United Nations Security Council</h2>
 					<p style="font-size: 1.25em">
 						<b>“Unable to make what is just strong, we have made what is strong just.”</b>
 					</p>
