--- a/unsc.html
+++ b/unsc.html
@@ -114,7 +114,7 @@
 								<img src="./images/maski.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 								<p>
 									<h1 style="font: 1em perpetua;  color:white">CO - CHAIR</h1>
-									<p style = "font: 2em perpetua; color:white">Vishal Maski</p> 
+									<p style = "font: 2em perpetua; color:white">Jahaan Kekreja</p> 
 								</p>
 							</div>
 						</a>
@@ -128,8 +128,21 @@
 								<p>
 									<h1 style="font: 1em perpetua;  color:white">CO - CHAIR</h1>
 
-									<p style = "font: 2em perpetua; color:white">Rishabh Shetty</p> 
+									<p style = "font: 2em perpetua; color:white">Eshaanika Kapoor</p> 
 
+								</p>
+							</div>
+						</a>
+
+					</article>
+
+					<article >
+						<a >
+							<div style="border-radius: 100%; text-align: center; size: 50%">
+								<img src="./images/maanya.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
+								<p>
+									<h1 style="font: 1em perpetua;;  color:white">VICE-CHAIR</h1>
+									<p style = "font: 2em perpetua; color:white">Divaa Uthkarsha</p> 
 								</p>
 							</div>
 						</a>
@@ -142,7 +155,7 @@
 								<img src="./images/maanya.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 								<p>
 									<h1 style="font: 1em perpetua;;  color:white">MODERATOR</h1>
-									<p style = "font: 2em perpetua; color:white">Maanya H</p> 
+									<p style = "font: 2em perpetua; color:white">Nishka Prashant</p> 
 								</p>
 							</div>
 						</a>
