--- a/unhrc.html
+++ b/unhrc.html
@@ -106,8 +106,8 @@
 							<div style="border-radius: 100%; text-align: center; size: 50%">
 								<img src="./images/aniii copy 2.png" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 								<p>
-									<h1 style="font: 1em perpetua;  color:white">PRESIDENT</h1>
-									<p style="font: 2em perpetua; color: white;">Anirudh M</p> 
+									<h1 style="font: 1em perpetua;  color:white">CO-CHAIR</h1>
+									<p style="font: 2em perpetua; color: white;">Khyati Pulipalyam</p> 
 								</p>
 							</div>
 						</a>
@@ -119,7 +119,7 @@
 								<img src="./images/jatin.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 								<p>
 									<h1 style="font: 1em perpetua;  color:white">CO-CHAIR</h1>
-									<p style="font: 2em perpetua; color: white;">Jatin Jain</p> 
+									<p style="font: 2em perpetua; color: white;">G K Tejhaswini</p> 
 								</p>
 							</div>
 						</a>
@@ -130,8 +130,8 @@
 								<div style="border-radius: 100%; text-align: center ; size: 50%">
 									<img src="./images/muktha.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; right: 50%; border-radius: 50%;">
 									<p>
-										<h1 style="font: 1em perpetua;  color:white"> CO-CHAIR</h1>
-										<p style="font: 2em perpetua; color: white;">Mukta Gangadhar</p> 
+										<h1 style="font: 1em perpetua;  color:white">CO-VICE-CHAIR</h1>
+										<p style="font: 2em perpetua; color: white;">Adhya Merathia</p> 
 									</p>
 								</div>
 							</a>
@@ -143,20 +143,7 @@
 									<img src="./images/diya.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; right: 50%; border-radius: 50%;">
 									<p>
 										<h1 style="font: 1em perpetua;  color:white">CO-VICE-CHAIR</h1>
-										<p style="font: 2em perpetua; color: white;">Diya C Madhu</p> 
-									</p>
-								</div>
-							</a>
-
-						</article>
-
-						<article>
-							<a >
-								<div style="border-radius: 100%; text-align: center ; size: 50%">
-									<img src="./images/she.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; right: 50%; border-radius: 50%;">
-									<p>
-										<h1 style="font: 1em perpetua;  color:white">CO-VICE-CHAIR</h1>
-										<p style="font: 2em perpetua; color: white;">Anvesha Girish</p> 
+										<p style="font: 2em perpetua; color: white;">Mansi Hiremath</p> 
 									</p>
 								</div>
 							</a>
