--- a/unsc.html
+++ b/unsc.html
@@ -111,7 +111,7 @@
 	<article >
 						<a >
 							<div style="border-radius: 100%; text-align: center; size: 50%">
-								<img src="./images/maski.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
+								<img src="./images/Jahaan.jpg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 								<p>
 									<h1 style="font: 1em perpetua;  color:white">CO - CHAIR</h1>
 									<p style = "font: 2em perpetua; color:white">Jahaan Kekreja</p> 
@@ -124,7 +124,7 @@
 						<article >
 						<a >
 							<div style="border-radius: 100%; text-align: center; size: 50%">
-								<img src="./images/protein.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
+								<img src="./images/Ishanika.jpg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 								<p>
 									<h1 style="font: 1em perpetua;  color:white">CO - CHAIR</h1>
 
@@ -139,7 +139,7 @@
 					<article >
 						<a >
 							<div style="border-radius: 100%; text-align: center; size: 50%">
-								<img src="./images/maanya.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
+								<img src="./images/Divaa.jpg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 								<p>
 									<h1 style="font: 1em perpetua;;  color:white">VICE-CHAIR</h1>
 									<p style = "font: 2em perpetua; color:white">Divaa Uthkarsha</p> 
@@ -152,7 +152,7 @@
 		<article >
 						<a >
 							<div style="border-radius: 100%; text-align: center; size: 50%">
-								<img src="./images/maanya.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
+								<img src="./images/Nishka.jpg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 								<p>
 									<h1 style="font: 1em perpetua;;  color:white">MODERATOR</h1>
 									<p style = "font: 2em perpetua; color:white">Nishka Prashant</p> 
