--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@ setInterval('updateTimer()', 1000);
 					<table>
 						<tbody>
 						<tr>
-						<a href='unem.html'>
+						<a href='unsc.html'>
 							<div style="border-radius: 100%; text-align: center">
 								<img src="./images/comlog/unem.jpg" style="height : 14em; width : 14em; left: 50%; border-radius: 50%; border: 2px solid gold !important;">
 								<h1 style="font: 1.3em sans-serif;  color:white ; text-transform: uppercase"
@@ -451,14 +451,14 @@ setInterval('updateTimer()', 1000);
 									href='unhrc.html'>United Nations Human Rights Council</h1>
 							</div>
 						</a><br>
-						<a href='ica.html'>
+						<a href='loksabha.html'>
 								<div style="border-radius: 100%; text-align: center">
 									<img src="./images/ipa.png.png" style="height : 14em; width : 14em; left: 50%; border-radius: 50%; border: 2px solid gold !important;">
 									<h1 style="font: 1.3em sans-serif;  color:white ; text-transform: uppercase"
 										href='loksabha.html'>Lok Sabha</h1>
 								</div>
 						</a><br>
-						<a href='fcc.html'>
+						<a href='disec.html'>
 							<div style="border-radius: 100%; text-align: center">
 								<img src="./images/comlog/fcc.jpg" style="height : 14em; width : 14em; left: 50%; border-radius: 50%; border: 2px solid gold !important;">
 								<h1 style="font: 1.3em sans-serif;  color:white ; text-transform: uppercase"
