--- a/loksabha.html
+++ b/loksabha.html
@@ -109,7 +109,7 @@
 								<img src="./images/praj.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 								<p>
 									<h1 style="font: 1em perpetua;  color:white">SPEAKER</h1>
-									<p style = "font: 2em perpetua; color:white" >Prajwal R</p> 
+									<p style = "font: 2em perpetua; color:white" >Ananthshreyas Nair</p> 
 								</p>
 							</div>
 						</a>
@@ -122,7 +122,7 @@
 									<p>
 										<h1 style="font: 1em perpetua;  color:white">CO-DEPUTY SPEAKER</h1>
 
-										<p style = "font: 2em perpetua; color:white">Ananthashreyas Nair</p>
+										<p style = "font: 2em perpetua; color:white">Avnee Savanur</p>
 
 									</p>
 								</div>
@@ -137,7 +137,21 @@
 									<p>
 										<h1 style="font: 1em perpetua;  color:white">CO-DEPUTY SPEAKER</h1>
 
-										<p style = "font: 2em perpetua; color:white">Yashaswini Sirwar</p> 
+										<p style = "font: 2em perpetua; color:white">Anshu Deshpande</p> 
+
+									</p>
+								</div>
+							</a>
+
+						</article>
+						<article>
+							<a >
+								<div style="border-radius: 100%; text-align: center ; size: 50%">
+									<img src="./images/yash2.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; right: 50%; border-radius: 50%;">
+									<p>
+										<h1 style="font: 1em perpetua;  color:white">Moderator</h1>
+
+										<p style = "font: 2em perpetua; color:white">Akshat Jain</p> 
 
 									</p>
 								</div>
