--- a/disec.html
+++ b/disec.html
@@ -110,8 +110,8 @@ Will the committe rise to the challenge of the emerging AI technologies and keep
 							<div style="border-radius: 100%; text-align: center; size: 50%">
 								<img src="./images/neha.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 								<p>
-									<h1 style="font: 1em perpetua;  color:white">CHAIR</h1>
-									<p style = "font: 2em perpetua; color:white" >Neha D Hemadri</p> 
+									<h1 style="font: 1em perpetua;  color:white">CO-CHAIR</h1>
+									<p style = "font: 2em perpetua; color:white" >Som Patwardhal</p> 
 
 								</p>
 							</div>
@@ -123,7 +123,7 @@ Will the committe rise to the challenge of the emerging AI technologies and keep
 								<div style="border-radius: 100%; text-align: center ; size: 50%">
 									<img src="./images/smr.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; right: 50%; border-radius: 50%;">
 									<p>
-										<h1 style="font: 1em perpetua; color:white">CO - VICE CHAIR</h1>
+										<h1 style="font: 1em perpetua; color:white">CO-CHAIR</h1>
 										<p style = "font: 2em perpetua; color:white">Smrithi Shenoy</p> 
 									</p>
 								</div>
@@ -136,8 +136,21 @@ Will the committe rise to the challenge of the emerging AI technologies and keep
 								<div style="border-radius: 100%; text-align: center ; size: 50%">
 									<img src="./images/nikil.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; right: 50%; border-radius: 50%;">
 									<p>
-										<h1 style="font: 1em perpetua; color:white">CO - VICE CHAIR</h1>
-										<p style = "font: 2em perpetua; color:white">Nikhil Athreya P</p> 
+										<h1 style="font: 1em perpetua; color:white">VICE-CHAIR</h1>
+										<p style = "font: 2em perpetua; color:white">Adhya Merathia</p> 
+									</p>
+								</div>
+							</a>
+
+						</article>
+
+						<article>
+							<a >
+								<div style="border-radius: 100%; text-align: center ; size: 50%">
+									<img src="./images/nikil.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; right: 50%; border-radius: 50%;">
+									<p>
+										<h1 style="font: 1em perpetua; color:white">MODERATOR</h1>
+										<p style = "font: 2em perpetua; color:white">Naman Gupta</p> 
 									</p>
 								</div>
 							</a>
