--- a/ipc.html
+++ b/ipc.html
@@ -105,7 +105,7 @@
 								<img src="./images/abhishek.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 								<p>
 									<h1 style="font: 1em perpetua;;  color:white">HEAD OF PRESS</h1>
-									<p style = "font: 2em perpetua;; color:white">Abhishek Srinivasan</p> 
+									<p style = "font: 2em perpetua;; color:white">Manjari Acharya</p> 
 								</p>
 							</div>
 						</a>
@@ -118,7 +118,7 @@
 								<img src="./images/keerthi.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 								<p>
 									<h1 style="font: 1em perpetua;  color:white">EDITOR-IN-CHIEF </h1>
-									<p style = "font: 2em perpetua; color:white">Keerthi Girish</p>  
+									<p style = "font: 2em perpetua; color:white">Aadya Mehrotra</p>  
 								</p>
 							</div>
 						</a>
@@ -130,7 +130,7 @@
 								<img src="./images/yati.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 								<p>
 									<h1 style="font: 1em perpetua;  color:white">SECRETARY OF PRESS</h1>
-									<p style = "font: 2em perpetua; color:white">Yati S Patil</p> 
+									<p style = "font: 2em perpetua; color:white">Tisya Chikodi</p> 
 
 								</p>
 							</div>
