--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@ setInterval('updateTimer()', 1000);
 						<center>
 							<span class="image"></span><br><br><br>
 							<div style="font-family: perpetua;" class="col-4 col-12-large">
-								<strong><p style="font-size:36px;">FUTURUM EST MANIBUS</p></strong>
+								<strong><p style="font-size:36px;">CITIUS, ALTIUS, FORTIUS</p></strong>
 							</div>
 							<p style="font-family: perpetua; font-size: 50px;">
 								<strong>26<sup>th</sup>, 27<sup>th</sup> & 28<sup>th</sup>								
