--- a/disec.html
+++ b/disec.html
@@ -121,10 +121,10 @@ Will the committe rise to the challenge of the emerging AI technologies and keep
 					<article>
 							<a >
 								<div style="border-radius: 100%; text-align: center ; size: 50%">
-									<img src="./images/smr.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; right: 50%; border-radius: 50%;">
+									<img src="./images/Keerthi.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; right: 50%; border-radius: 50%;">
 									<p>
 										<h1 style="font: 1em perpetua; color:white">CO-CHAIR</h1>
-										<p style = "font: 2em perpetua; color:white">Smrithi Shenoy</p> 
+										<p style = "font: 2em perpetua; color:white">Keerthi Girish</p> 
 									</p>
 								</div>
 							</a>
@@ -134,7 +134,7 @@ Will the committe rise to the challenge of the emerging AI technologies and keep
 						<article>
 							<a >
 								<div style="border-radius: 100%; text-align: center ; size: 50%">
-									<img src="./images/nikil.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; right: 50%; border-radius: 50%;">
+									<img src="./images/Aadya.jpg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; right: 50%; border-radius: 50%;">
 									<p>
 										<h1 style="font: 1em perpetua; color:white">VICE-CHAIR</h1>
 										<p style = "font: 2em perpetua; color:white">Adhya Merathia</p> 
