--- a/unhrc.html
+++ b/unhrc.html
@@ -128,10 +128,10 @@
 			<article>
 							<a >
 								<div style="border-radius: 100%; text-align: center ; size: 50%">
-									<img src="./images/Aadya.jpg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; right: 50%; border-radius: 50%;">
+									<img src="./images/Aarush.jpg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; right: 50%; border-radius: 50%;">
 									<p>
 										<h1 style="font: 1em perpetua;  color:white">CO-VICE-CHAIR</h1>
-										<p style="font: 2em perpetua; color: white;">Adhya Merathia</p> 
+										<p style="font: 2em perpetua; color: white;">Aarush Misra</p> 
 									</p>
 								</div>
 							</a>
