--- a/ipc.html
+++ b/ipc.html
@@ -78,7 +78,7 @@
 						<b>"Put it before them briefly, so they will read it; clearly so they will appreciate it, picturesquely so they will remember it and, above all, accurately so they will be guided by its light."</b>
 					</p>
 					<p style="font-size: 1.25em;">
-                                            <b> Joseph Pulitzer</b>
+                                            <b>-Joseph Pulitzer</b>
 					</p>
 					<p style="font-size: 1.15em">
 						A committee brimming with bright ideas, sophisticated opinions and a love for writing, delegates are tasked with the duty of holding the authority accountable. A council of reputed news outlets must collaborate to settle a debate for the ages, whether it be a rising conflict between state and private funded agencies or battle of sensationalism. Does money manipulate facts? Can power polarise the press? 
