--- a/contactus.html
+++ b/contactus.html
@@ -40,7 +40,7 @@
                                 <li>
                                     <a href="#">Delegate Materials</a>
                                     <ul>
-                                        <li><a href="handbook.pdf">Delegate Handbook</a></li>
+                                        <li><a href="../rnpsmun2023.github.io/assets/pdfs/handbook.pdf">Delegate Handbook</a></li>
                                         <li>
                                             <a href="#">Background Guides</a>
                                             <ul>
