--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ setInterval('updateTimer()', 1000);
 						<li>
 							<a href="#">Delegate Materials</a>
 							<ul>
-								<li><a href="handbook.pdf">Delegate Handbook</a></li>
+								<li><a href="../rnpsmun2023.github.io/assets/pdfs/handbook.pdf">Delegate Handbook</a></li>
 								<li>
 									<a href="#">Background Guides</a>
 									<ul>
