--- a/ipc.html
+++ b/ipc.html
@@ -36,7 +36,7 @@
 						<li>
 							<a href="#">Delegate Materials</a>
 							<ul>
-								<li><a href="handbook.pdf">Delegate Handbook</a></li>
+								<li><a href="../rnpsmun2023.github.io/assets/pdfs/handbook.pdf">Delegate Handbook</a></li>
 								<li>
 									<a href="#">Background Guides</a>
 									<ul>
@@ -91,7 +91,7 @@
 									<h3 class="major">AGENDA</h3>
 
 					<p style="font-weight: bold; text-align: center; font-size: 1.5em;">
-						Political Polarization and Modern Journalism
+						Control the Money, Control the Media: Fund vs Fact
 					</p>
 
 								</div>
