--- a/unhrc.html
+++ b/unhrc.html
@@ -154,7 +154,7 @@
 			<!-- Footer -->
             <footer id="footer">
                 <ul class="icons">
-                    <li><a href="https://www.instagram.com/rnpsmun2022/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+                    <li><a href="https://instagram.com/rnpsmun2023?igshid=MzRlODBiNWFlZA==" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
                     <li><a href="mailto:rnpsmun2022@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
                     <li><a href="tel:08023350361" class="icon solid alt fa-phone"><span class="label">Phone</span></a></li>
                     <!--<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
