--- a/unhrc.html
+++ b/unhrc.html
@@ -36,7 +36,7 @@
 						<li>
 							<a href="#">Delegate Materials</a>
 							<ul>
-								<li><a href="../rnpsmun2023.github.io/assets/pdfs/handbook.pdf">Delegate Handbook</a></li>
+								<li><a href="handbook.pdf">Delegate Handbook</a></li>
 								<li>
 									<a href="#">Background Guides</a>
 									<ul>
