--- a/loksabha.html
+++ b/loksabha.html
@@ -118,7 +118,7 @@
 					<article>
 							<a >
 								<div style="border-radius: 100%; text-align: center ; size: 50%">
-									<img src="./images" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; right: 50%; border-radius: 50%;">
+									<img src="./images/avnee.jpg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; right: 50%; border-radius: 50%;">
 									<p>
 										<h1 style="font: 1em perpetua;  color:white">CO-DEPUTY SPEAKER</h1>
 
