--- a/index.html
+++ b/index.html
@@ -401,7 +401,9 @@ setInterval('updateTimer()', 1000);
 					</header>
 					
 					<footer class="major">
-						<p style="font-size:125%;">Competitive, driven, and fun-loving, there's nothing Vishal finds more interesting than the unknown. With his quick wit and ability to think on his feet, Vishal tends to gravitate towards chaos, then breaks it down with razor sharp reasoning and deduction to arrive at the most logical outcome. But the real fun for Vishal lies in not knowing what comes next, and having to rely only on oneself to come out on top no matter what the situation. His position as School Prefect is a testament to his friendly and approachable nature as well as his leadership qualities. When he isn't actively involved in achieving world domination, he can often be found playing piano, basketball or watching anime. With Vishal serving as this RNPS-MUN's Director General, you can be assured of an incredible and electrifying conference. So, veterans and first timers alike, get ready for three days of fast-paced and stimulating debate that will truly test your limits and push the boundaries of the standard for a high school debate.</p>
+						<p style="font-size:125%;">He’s got the kind of quiet confidence that cannot be faked; he’s the kind of intelligent that doesn’t intimidate. He’s the brightest person in the room, friendly almost to a fault (he’s annoyingly nice). Being the nerdiest person ever, he’s the type to fangirl over computers. If you ever find yourself in a crisis (that doesn't involve running) he’s your guy. He’ll answer all your moronic questions without a hint of condescension. Diplomat that he is, he’ll find a way to believe in every single person he meets. 
+							He has no idea how to take a compliment, but will always make sure you feel safe. He is determined, he is authentic, he is our North Star. </p>
+						<p style="font-size:125%;">This is Anirudh Mydukur, the Director General of R-NPS MUN’23: The Seventh Edition.</p>
 						<ul class="actions special">
 							<li><a class="button" id="myBtn2" class="special">LETTER FROM THE DIRECTOR GENERAL</a></li>
 							<div id="myModal2" class="modal">
