--- a/disec.html
+++ b/disec.html
@@ -108,7 +108,7 @@ Will the committe rise to the challenge of the emerging AI technologies and keep
 					<article >
 						<a >
 							<div style="border-radius: 100%; text-align: center; size: 50%">
-								<img src="./images/neha.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
+								<img src="./images/som.jpg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 								<p>
 									<h1 style="font: 1em perpetua;  color:white">CO-CHAIR</h1>
 									<p style = "font: 2em perpetua; color:white" >Som Patwardhal</p> 
@@ -152,7 +152,7 @@ Will the committe rise to the challenge of the emerging AI technologies and keep
 									<img src="./images/nikil.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; right: 50%; border-radius: 50%;">
 									<p>
 										<h1 style="font: 1em perpetua; color:white">MODERATOR</h1>
-										<p style = "font: 2em perpetua; color:white">Naman Gupta</p> 
+										<p style = "font: 2em perpetua; color:white">Naman Hegde</p> 
 									</p>
 								</div>
 							</a>
