--- a/eb.html
+++ b/eb.html
@@ -76,7 +76,7 @@
 								<article>
 									<a >
 										<div style="border-radius: 100%; text-align: center; size: 50%">
-											<img src="./images/dhruthi.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
+											<img src="./images/dhruti.jpg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 											<p>
 												<h1 style="font: 1em;  color:white">SECRETARY GENERAL</h1>
 												<p style = "font: 2em perpetua; color: white;">Dhruti Kedilaya </p> 
@@ -88,7 +88,7 @@
 								<article>
 									<a >
 										<div style="border-radius: 100%; text-align: center; size: 50%">
-											<img src="./images/aniii copy 2.png" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
+											<img src="./images/anirudh.jpg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 											<p>
 											<h1 style="font: 1em;  color:white">DIRECTOR GENERAL</h1>
 												<p style = "font: 2em perpetua; color: white;">Anirudh M</p> 
@@ -97,7 +97,18 @@
 									</a>
 		
 								</article>
-
+								<article>
+									<a >
+										<div style="border-radius: 100%; text-align: center; size: 50%">
+											<img src="./images/" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
+											<p>
+											<h1 style="font: 1em;  color:white">CRISIS DIRECTOR</h1>
+												<p style = "font: 2em perpetua; color: white;">ATHREYA DESHPANDE</p> 
+											</p>
+										</div>
+									</a>
+		
+								</article>
 								<article>
 									<a >
 										<div style="border-radius: 100%; text-align: center; size: 50%">
@@ -146,6 +157,43 @@
 									</a>
 		
 								</article>
+								<article>
+									<a >
+										<div style="border-radius: 100%; text-align: center; size: 50%">
+											<img src="./images/sriram.jpg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
+											<p>
+												<h1 style="font: 1em;  color:white">HEAD OF  LOGISTICS</h1>
+												<p style = "font: 2em perpetua; color: white;">Sriram K</p> 
+											</p>
+										</div>
+									</a>
+		
+								</article>
+								<article>
+									<a >
+										<div style="border-radius: 100%; text-align: center; size: 50%">
+											<img src="./images/" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
+											<p>
+												<h1 style="font: 1em;  color:white">HEAD OF  LOGISTICS</h1>
+												<p style = "font: 2em perpetua; color: white;">Samarth S</p> 
+											</p>
+										</div>
+									</a>
+		
+								</article>
+								<article>
+									<a >
+										<div style="border-radius: 100%; text-align: center; size: 50%">
+											<img src="./images/srini.jpg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
+											<p>
+												<h1 style="font: 1em;  color:white">HEAD OF  LOGISTICS</h1>
+												<p style = "font: 2em perpetua; color: white;">Srinivas I</p> 
+											</p>
+										</div>
+									</a>
+		
+								</article>
+
 								<!--<article>
 									<a >
 										<div style="border-radius: 100%; text-align: center; size: 50%">
