--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@ setInterval('updateTimer()', 1000);
 					<div id="page-wrapper">
 					<header class="major">
 						<h2>Secretary General of RNPSMUN 2022</h2>
-						<img src="images/dhruthi.jpeg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);border-radius: 50%; height: 20em; width: 20em;" alt="" /><p style="font-size: 1.5em;"> Dhruti Kedilaya</p><br>
+						<img src="images/dhruti.jpg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);border-radius: 50%; height: 20em; width: 20em;" alt="" /><p style="font-size: 1.5em;"> Dhruti Kedilaya</p><br>
 					</header>
 					
 					<footer class="major">
@@ -397,7 +397,7 @@ setInterval('updateTimer()', 1000);
 				<div class="container">
 					<header class="major">
 						<h2>Director General of RNPSMUN 2022</h2>
-						<img src="images/aniii copy 2.png" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);border-radius: 50%; height: 20em; width: 20em; " alt="" /><p style="font-size: 1.5em;">Anirudh M</p><br>
+						<img src="images/anirudh.jpg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);border-radius: 50%; height: 20em; width: 20em; " alt="" /><p style="font-size: 1.5em;">Anirudh M</p><br>
 					</header>
 					
 					<footer class="major">
