--- a/index.html
+++ b/index.html
@@ -355,17 +355,9 @@ setInterval('updateTimer()', 1000);
 					</header>
 					
 					<footer class="major">
-						<p style="font-size:125%;">“Only a few know, how much one must know to know how little he knows” -Werner
-							Heisenberg <br>
-							Hardworking, determined, and deeply insightful, Dhruti is usually found engaging animatedly in
-							spirited conversations. With her love for facts and greater love for rhetoric, she’ll make sure that
-							she’s one step ahead of the rest with her methodical strategizing and impeccable research, and
-							will certainly leave you rethinking everything you said even if she cannot convince you. She also feels that most of the
-							world’s problems can be solved by asking the right questions and having a logical approach.
-							When not swimming or MUNing, you might find her reading a captivating book on Indian
-							history (or just rereading Harry Potter!) or researching the latest scientific developments. An
-							amiable and friendly person, she’ll certainly get along with you as long as you have an aversion
-							for Comic Sans too, and will make sure that you have an exhilarating and fun-filled conference!</p>
+						<p style="font-size:125%;">‘Electing strange perfections in every stranger I choose.’-Hozier<br> 
+							She’s the kind of person you would not want to interact with on a Monday morning. Her (seemingly endless amount) energy is infectious and her laugh, even more so. But don’t be fooled, her tyranny is wrapped with the prettiest smile. Her infatuation with perfection seeps through her every action. And her tendency to be ruthlessly overachieving can be traced back to her psychotic sleep schedule (she wakes up at 4AM.) She’s the most put together person in a room, and will never back down from a fight. She is passionate, she is intelligent and she will get the job done, no questions asked. <br>
+							This is Dhruti Kedilaya, Secretary General of R-NPS MUN’23: The Seventh Edition.</p>
 						<ul class="actions special">
 							<li><a class="button" id="myBtn" class="special">LETTER FROM THE SECRETARY GENERAL</a></li>
 							<div id="myModal" class="modal">
