--- a/index.html
+++ b/index.html
@@ -355,9 +355,10 @@ setInterval('updateTimer()', 1000);
 					</header>
 					
 					<footer class="major">
-						<p style="font-size:125%;">‘Electing strange perfections in every stranger I choose.’-Hozier<br> 
-							She’s the kind of person you would not want to interact with on a Monday morning. Her (seemingly endless amount) energy is infectious and her laugh, even more so. But don’t be fooled, her tyranny is wrapped with the prettiest smile. Her infatuation with perfection seeps through her every action. And her tendency to be ruthlessly overachieving can be traced back to her psychotic sleep schedule (she wakes up at 4AM.) She’s the most put together person in a room, and will never back down from a fight. She is passionate, she is intelligent and she will get the job done, no questions asked. <br>
+						<p style="font-size:125%;">"Electing strange perfections in every stranger I choose." - Hozier<br> 
+							She’s the kind of person you would not want to interact with on a Monday morning. Her (seemingly endless amount) energy is infectious and her laugh, even more so. But don’t be fooled, her tyranny is wrapped with the prettiest smile. Her infatuation with perfection seeps through her every action. And her tendency to be ruthlessly overachieving can be traced back to her psychotic sleep schedule. She’s the most put together person in a room, and will never back down from a fight. She is passionate, she is intelligent and she will get the job done, no questions asked. <br>
 							This is Dhruti Kedilaya, Secretary General of R-NPS MUN’23: The Seventh Edition.</p>
+
 						<ul class="actions special">
 							<li><a class="button" id="myBtn" class="special">LETTER FROM THE SECRETARY GENERAL</a></li>
 							<div id="myModal" class="modal">
@@ -393,7 +394,8 @@ setInterval('updateTimer()', 1000);
 					</header>
 					
 					<footer class="major">
-						<p style="font-size:125%;">He’s got the kind of quiet confidence that cannot be faked; he’s the kind of intelligent that doesn’t intimidate. He’s the brightest person in the room, friendly almost to a fault (he’s annoyingly nice). Being the nerdiest person ever, he’s the type to fangirl over computers. If you ever find yourself in a crisis (that doesn't involve running) he’s your guy. He’ll answer all your moronic questions without a hint of condescension. Diplomat that he is, he’ll find a way to believe in every single person he meets. 
+						<p style="font-size:125%;">"Life is a book and there are a thousand pages I have not yet read."	Cassandra Clare, Clockwork Princess<br>
+							He’s got the kind of quiet confidence that cannot be faked; he’s the kind of intelligent that doesn’t intimidate. He’s the brightest person in the room, friendly almost to a fault. Being the nerdiest person ever, he’s the type to fanboy over computers. If you ever find yourself in a crisis (that doesn't involve running) he’s your guy. He’ll answer all your questions without a hint of condescension. Diplomat that he is, he’ll find a way to believe in every single person he meets. 
 							He has no idea how to take a compliment, but will always make sure you feel safe. He is determined, he is authentic, he is our North Star. <br>
 							This is Anirudh Mydukur, the Director General of R-NPS MUN’23: The Seventh Edition.</p>
 						<ul class="actions special">
