--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@ setInterval('updateTimer()', 1000);
 					</header>
 					
 					<footer class="major">
-						<p style="font-size:125%;">"Life is a book and there are a thousand pages I have not yet read."	Cassandra Clare, Clockwork Princess<br>
+						<p style="font-size:125%;">"Life is a book and there are a thousand pages I have not yet read."	- Cassandra Clare, Clockwork Princess<br>
 							He’s got the kind of quiet confidence that cannot be faked; he’s the kind of intelligent that doesn’t intimidate. He’s the brightest person in the room, friendly almost to a fault. Being the nerdiest person ever, he’s the type to fanboy over computers. If you ever find yourself in a crisis (that doesn't involve running) he’s your guy. He’ll answer all your questions without a hint of condescension. Diplomat that he is, he’ll find a way to believe in every single person he meets. 
 							He has no idea how to take a compliment, but will always make sure you feel safe. He is determined, he is authentic, he is our North Star. <br>
 							This is Anirudh M, the Director General of R-NPS MUN’23: The Seventh Edition.</p>
