--- a/contactus.html
+++ b/contactus.html
@@ -105,10 +105,18 @@
                                             </tr>
                                     <tr style="text-align: justify">
                                         <td>HEAD OF ORGANISING COMMITTEE</td>
-                                        <td>RAAGHAV RATHI<BR>
-                                                <BR>DIYA C MADHU
+                                        <td>RAAGHAV RATHI
+   
                                         </td>						
-                                        <TD>+91 91086 31491 <BR><BR>+91 78927 70734</a> </TD>
+                                        <TD>+91 91086 31491</a> </TD>
+                                        
+                                        </td>
+                                    </tr>
+				    <tr style="text-align: justify">
+                                        <td>HEAD OF DELEGATE RELATIONS</td>
+                                        <td> DIYA C MADHU
+                                        </td>						
+                                        <TD>+91 78927 70734 </TD>
                                         
                                         </td>
                                     </tr>
