--- a/disec.html
+++ b/disec.html
@@ -111,7 +111,7 @@ Will the committe rise to the challenge of the emerging AI technologies and keep
 								<img src="./images/som.jpg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 								<p>
 									<h1 style="font: 1em perpetua;  color:white">CO-CHAIR</h1>
-									<p style = "font: 2em perpetua; color:white" >Som Patwardhal</p> 
+									<p style = "font: 2em perpetua; color:white" >Som Patwardhan</p> 
 
 								</p>
 							</div>
