--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@ setInterval('updateTimer()', 1000);
 					<footer class="major">
 						<p style="font-size:125%;">He’s got the kind of quiet confidence that cannot be faked; he’s the kind of intelligent that doesn’t intimidate. He’s the brightest person in the room, friendly almost to a fault (he’s annoyingly nice). Being the nerdiest person ever, he’s the type to fangirl over computers. If you ever find yourself in a crisis (that doesn't involve running) he’s your guy. He’ll answer all your moronic questions without a hint of condescension. Diplomat that he is, he’ll find a way to believe in every single person he meets. 
 							He has no idea how to take a compliment, but will always make sure you feel safe. He is determined, he is authentic, he is our North Star. </p>
-						<p style="font-size:125%;">This is Anirudh Mydukur, the Director General of R-NPS MUN’23: The Seventh Edition.</p>
+						<p style="font-size:125%;">This is Anirudh M, the Director General of R-NPS MUN’23: The Seventh Edition.</p>
 						<ul class="actions special">
 							<li><a class="button" id="myBtn2" class="special">LETTER FROM THE DIRECTOR GENERAL</a></li>
 							<div id="myModal2" class="modal">
