--- a/credits.html
+++ b/credits.html
@@ -38,7 +38,8 @@
 							<ul>
 								<li><a href="handbook.pdf">Delegate Handbook</a></li>
 								<li>
-									<a href="#">Background Guides</a>
+									<a href="#">Background Guides (Coming soon)</a>
+<!--
 									<ul>
 										<li><a href="https://drive.google.com/file/d/1dSB5s6bvmgHJdtSKLXhbBGaRO3WUw42b/view?usp=sharing">UNSC </a></li>
 										<li><a href="https://drive.google.com/file/d/1Zw9EJjP9eq-zD7YSrdO79TulWtsFjnCP/view?usp=drivesdk">UNHRC</a></li>
@@ -46,6 +47,7 @@
 										<li><a href="https://drive.google.com/file/d/1N6JJAeZ6GZX0CqS6rA8Ac1MyLOQFSLOS/view?usp=sharing">DISEC</a></li>
 										<li><a href="https://drive.google.com/file/d/1tzyTvPE8NAQ6luA3CaBycYudWWcqHkct/view?usp=sharing">IPC</a></li>
 									</ul>
+-->
 								</li>
 								<li>
 									<a href="https://drive.google.com/drive/u/1/folders/1V2zTnMqBSRimD45uQV40Ldeu9UmN6hj6">Matrix</a>
