--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@ setInterval('updateTimer()', 1000);
 							She’s the kind of person you would not want to interact with on a Monday morning. Her (seemingly endless amount) energy is infectious and her laugh, even more so. But don’t be fooled, her tyranny is wrapped with the prettiest smile. Her infatuation with perfection seeps through her every action. And her tendency to be ruthlessly overachieving can be traced back to her psychotic sleep schedule.  
 							She’s the most put together person in a room, and will never back down from a fight. She is passionate, she is intelligent and she will get the job done, no questions asked. <br>
 							This is Dhruti Kedilaya, Secretary General of R-NPS MUN’23: The Seventh Edition.</p>
-		+				<ul class="actions special">
+						<ul class="actions special">
 							<li><a class="button" id="myBtn" class="special">LETTER FROM THE SECRETARY GENERAL</a></li>
 							<div id="myModal" class="modal">
 								<div class="modal-content">
