--- a/loksabha.html
+++ b/loksabha.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
 		<title>RNPSMUN 2023-IPC</title>
-		<link rel="icon" type="image/x-icon" href="images/logo 2023.png">
+		<link rel="icon" type="image/x-icon" href="images/comlog/LS.jpg">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -68,7 +68,7 @@
 				<div style="font-family: perpetua;" id="main" class="wrapper style1">
 					<div class="container">
 						<div style="text-align: center;">
-						<span class="image"><img src="./images/ipa.png.png" alt="" style="border-radius: 50%; width: 18em; height: 18em; border: 2px solid gold !important;"/></span>
+						<span class="image"><img src="./images/comlog/LS.jpg" alt="" style="border-radius: 50%; width: 18em; height: 18em; border: 2px solid gold !important;"/></span>
 					</div>
 						<header class="major">
 						</header>
