--- a/unhrc.html
+++ b/unhrc.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
 		<title>RNPSMUN 2023-UNHRC</title>
-		<link rel="icon" type="image/x-icon" href="images/comlog/UNHRC.jpg">
+		<link rel="icon" type="image/x-icon" href="../rnpsmun2023.github.io/images/comlog/UNHRC.jpg">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
