--- a/index.html
+++ b/index.html
@@ -371,14 +371,17 @@ setInterval('updateTimer()', 1000);
 									<h2>LETTER FROM THE SECRETARY GENERAL</h2>
 								  </div>
 								  <div class="modal-body">
-									<p align="left">Greetings Delegates!<br><br>
-										&emsp;&emsp;&emsp; On behalf of the RNPSMUN 2022 family, I am honored to extend my warmest welcome to each and every one of you to the 6th edition of RNPSMUN. Having had our last two editions online, an offline edition is a long-awaited change. This MUN seeks to bring out the best in each delegate, in terms of both diplomacy and leadership, and I can assure you that by the end of these three days, not only would you have learnt a lot more than you expected, but also grown into a more confident and assertive person.
-										The rigorous efforts which have gone in for the past numerous weeks reflect in what we all strive for – a glorious success of this conference. With five engaging committees, each with exciting agendas, a professional Executive Board, an enthusiastic Organizing Committee and a dedicated Secretariat, we promise you an educational and fun-filled conference, along with a great learning experience and lots of gratifying memories. </p>
-									<p align="left">From being a nervous first timer a few years ago to being the Secretary General of RMUN 2022, the journey has been phenomenal, and I truly hope you find MUNing as delightful as I do. Regardless of whether you win or not, it is the impact you make that matters most. As future global citizens, it is our responsibility to find solutions for the various pressing issues that plague the world today, and change, after all, starts with small conversations among people who care. This conference is a small step that will go a long way. Please feel free to reach out to me in case of any queries.<br><br>
-										Looking forward to meeting you all!</p>
+									<p align="left">Dear Delegates,<br><br>
+										&emsp;&emsp;&emsp; As Secretary-General of R-NPSMUN 2023: The 7th Edition, I am thrilled to extend my warmest greetings to each and every one of you.
+
+										Going from a shy 8th grader to being the Sec Gen of a MUN has been one of the most fulfilling and validating experiences of my life. That is what I hope MUN will become for you, it is more than fiery debates and intensive research, it is the ability to make lifelong connections and unforgettable memories. Whether it is your first time attending a MUN or your tenth. I promise R-NPSMUN 2023 will be one to remember, our top-notch Executive Board and Dedicated Secretariat have done everything they can to ensure a smooth conference for you all. So I urge you, my dear delegates, to seize this opportunity, immerse yourselves in the world of diplomacy, and leave no stone unturned in your pursuit of excellence. I have immense faith in your ability to take R-NPSMUN to its pinnacle. </p>
+									<p align="left">Get ready to join the madness, embrace the chaos, and let your inner diplomat shine. Remember, it's not just about winning awards and accolades. It's about showcasing your eloquence while managing to keep a straight face and mastering the art of diplomatic charm with a smile.
+
+										Please feel free to reach out to me for anything, before or during the conference.</p>
+									<p>May the odds be ever in your favour!</p>
 								  </div>
 								  <div class="modal-footer">
-									<h3>-Dhruti Deshpande</h3>
+									<h3>-Dhruti Kedilaya</h3>
 								  </div>
 								</div>
 							  </div>
@@ -411,12 +414,18 @@ setInterval('updateTimer()', 1000);
 								  </div>
 								  <div class="modal-body">
 									<p align="left">Greetings, Delegates!<br><br>
-										&emsp;&emsp;&emsp; It is my honour and privilege to welcome every one of you to the sixth installment of RNPS MUN. As is tradition, we plan to raise the standard yet again, and make this year’s MUN the best we’ve held so far. To write off this MUN as just another inter-school event would not be doing it justice. Our Secretariat and EB have worked tirelessly to make every moment of this MUN an incredible experience.
-										With five amazing committees, you really can’t make a wrong choice. Veteran debater or first timer, you’re guaranteed to find a committee for you. In accordance with our past standards, RNPS MUN will not let you down.</p>
-									<p align="left">In the present state of the world, the importance of MUN is more apparent than ever. The need to speak out and make your opinion heard is ever-growing in this environment of uncertainty and turmoil. A MUN is a loudspeaker for your voice, and breathes new life into your words. Winning is important, yes. But the true worth of a MUN lies in the memories and knowledge you walk away with. So, dive headfirst into three days of rigorous debate, deliberation, press conferences and crises. The future is in our hands, and it’s time to prove ourselves worthy of that mantle. And as always, may the best delegate win.</p>
-								  </div>
+										&emsp;&emsp;&emsp;Welcome to the R-NPSMUN 2023, the seventh session. Like always, we aspire to be even greater than before, and this year's MUN is set to rise to greater heights than ever before.
+
+										Our EB has worked tirelessly to present five extraordinary committees, each with its own captivating agenda. It won't matter if this is your first MUN or your twentieth, R-NPSMUN will be a conference you will never forget.
+										
+										It has been years since my first MUN, but it took a look time for me to realise what people meant when they told me, “Once a person has been to an MUN, it changes them forever.”
+										
+										You’re exposed to a completely different way of communication that does not come naturally. You’re exposed to new people with whom you have to interact with, convince, and pitch your own agendas to. MUNs force you to think outside your comfort zone and advocate for topics that you yourself might not agree with. Once you come out of that protective shell around yourself, there will be no going back in.</p>
+									<p align="left">So dive into debates, speeches, crises, and press conferences. Remember, a MUN isn't about winning, but rather about making memories and friends. Above all, when you find yourself surrounded by delegates dressed in formals, trying to maintain the utmost professional and serious environment, you will find yourself holding back a smile of enjoyment. And that smile is what makes MUNs great.</p>
+								    <p>May the odds be ever in your favour!</p>
+								</div>
 								  <div class="modal-footer">
-									<h3>-Vishal Rao</h3>
+									<h3>-Anirudh M</h3>
 								  </div>
 								</div>
 							  </div>
