--- a/loksabha.html
+++ b/loksabha.html
@@ -95,7 +95,7 @@
 					<h3 class="major">AGENDA</h3>
 
 					<p style="font-weight: bold; text-align: center; font-size: 1.5em">
-						Freedom of expression in India i.e Article 19(1)(a), and its hindrance both by Government and General Public for issues not related to National Security or Defense 
+						Arguing the validity of Section 124A with special Reference to Freedom of Speech and Expression
 					</p>
 
 								</div>
