--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@ setInterval('updateTimer()', 1000);
 									<p align="left">Get ready to join the madness, embrace the chaos, and let your inner diplomat shine. Remember, it's not just about winning awards and accolades. It's about showcasing your eloquence while managing to keep a straight face and mastering the art of diplomatic charm with a smile.
 
 										Please feel free to reach out to me for anything, before or during the conference.</p>
-									<p>May the odds be ever in your favour!</p>
+									<p align="left">May the odds be ever in your favour!</p>
 								  </div>
 								  <div class="modal-footer">
 									<h3>-Dhruti Kedilaya</h3>
@@ -422,7 +422,7 @@ setInterval('updateTimer()', 1000);
 										
 										You’re exposed to a completely different way of communication that does not come naturally. You’re exposed to new people with whom you have to interact with, convince, and pitch your own agendas to. MUNs force you to think outside your comfort zone and advocate for topics that you yourself might not agree with. Once you come out of that protective shell around yourself, there will be no going back in.</p>
 									<p align="left">So dive into debates, speeches, crises, and press conferences. Remember, a MUN isn't about winning, but rather about making memories and friends. Above all, when you find yourself surrounded by delegates dressed in formals, trying to maintain the utmost professional and serious environment, you will find yourself holding back a smile of enjoyment. And that smile is what makes MUNs great.</p>
-								    <p>May the odds be ever in your favour!</p>
+								    <p align="left">May the odds be ever in your favour!</p>
 								</div>
 								  <div class="modal-footer">
 									<h3>-Anirudh M</h3>
