--- a/disec.html
+++ b/disec.html
@@ -96,7 +96,7 @@ Will the committe rise to the challenge of the emerging AI technologies and keep
 									<h3 class="major">AGENDA</h3>
 
 					<p style="font-weight: bold; text-align: center; font-size: 1.5em;">
-						Emerging Technologies and Arms Control 
+						Deliberation of Arms Control in the Age of Emerging Technologies
 					</p>
 
 								</div>
